# guidance

./: .gitignore  CMakeLists.txt  build.sh  install.sh
include/: cell_types.h  field_type.h  graph.h  maze.h  maze_graph.h  path_finding.h  utils.h
res/mazes/: big_maze.txt  hard_maze.txt  maze_with_costs.txt  maze_with_costs2.txt  simple_maze.txt
test/: CMakeLists.txt  parse_graph_test.cc  parse_maze_test.cc  path_finding_test.cc
test/guidance_tests/: CMakeLists.txt  parse_graph_test.cc  parse_maze_test.cc  path_finding_test.cc
test/perfomance_tests/: CMakeLists.txt  empty_maze_test.cc
